--- a/Index.html
+++ b/Index.html
@@ -8,13 +8,13 @@
 </head>
 
 <body>
-    <div class="menu">
-        <ul>
-            <li>Home</li>
-            <li>Fotos</li>
-            teste
+    <nav class="navbar navbar-dark bg-dark">
+        <ul class="nav justfy-content-content-center">
+            <li class="nav-item"><a href="#" class="nav-link">home </a></li>
+            <li class="nav-item"><a href="#" class="nav-link">fotos </a></li>
+            
         </ul>
-    </div>
+    </nav>
     <div class="conteudo">
 
     </div>
